k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-joi
  namespace: devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops-joi
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: devops-joi
    spec:
      restartPolicy: Always
      containers:
      - name: devops-joi-app
        image: 'joidevops/app:latest'
        command: [ '/app/entrypoint' ]
        args: [ '/usr/sbin/apache2 -DFOREGROUND' ]
        imagePullPolicy: Always
        ports:
          - containerPort: 80
            hostPort: 80
            protocol: TCP
        volumeMounts:
          - mountPath: /app/src/
            name: src-volume
          - mountPath: /etc/apache2/sites-enabled/
            name: site-volume
          - mountPath: /app/log
            name: log-volume
        livenessProbe:
          httpGet:
            path: /diagnostic/liveness
            port: 80
            scheme: HTTP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /diagnostic/readiness
            port: 80
            scheme: HTTP
      volumes:
        - name: src-volume
          hostPath:
            path: /Users/qijie.zhang/interview/app/src
            type: Directory
        - name: site-volume
          hostPath:
            path: /Users/qijie.zhang/interview/app/apache
            type: Directory
        - name: log-volume
          hostPath:
            path: /Users/qijie.zhang/interview/app/log
            type: Directory
        - name: migration-volume
          hostPath:
            path: /Users/qijie.zhang/interview/migration
            type: Directory
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: devops-joi-db
  namespace: devops
spec:
  serviceName: "devops-joi-db"
  replicas: 1
  selector:
    matchLabels:
      app: devops-joi-db
  template:
    metadata:
      labels:
        app: devops-joi-db
    spec:
      restartPolicy: Always
      containers:
        - name: devops-joi-db
          image: 'mysql:8'
          imagePullPolicy: Always
          ports:
            - containerPort: 3306
              protocol: TCP
