k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-joi
spec:
  type: ClusterIP
  selector:
    app: devops-joi
  ports:
    - name: http
      port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: devops-joi-db
spec:
  selector:
    app: devops-joi-db
  ports:
    - protocol: TCP
      port: 3306
